--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
   <version>1.0-SNAPSHOT</version>
   <name>java-hello-world-webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <plugin>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>2.3.2</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
